--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Lista de Tareas</title>
+    <title>LISTA DE TAREAS</title>
    
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
   </head>
@@ -10,7 +10,7 @@
     <!-- NAVIGATION -->
     <nav class="navbar navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Agrega  tus tareas en esta plataforma</a>
+        <a class="navbar-brand" href="#">Agrega  tus tareas</a>
       </div>
     </nav>
 
@@ -23,7 +23,7 @@
               <!-- FORM TO ADD TASKS -->
               <form id="formTask">
                 <div class="form-group">
-                  <input type="text" id="title" placeholder="Agregar Tarea" class="form-control">
+                  <input type="text" id="title" placeholder="Tarea Pendiente" class="form-control">
                 </div>
                 <div class="form-group">
                   <textarea id="description" cols="30" rows="10" class="form-control" id="title" placeholder="Describir Tarea"></textarea>
