Se agrego un texo para indicar la opcion de guardar tus tareas

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
                   <textarea id="description" cols="30" rows="10" class="form-control" id="title" placeholder="Describir Tarea"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Guardar</button>
+                <h1>Da clic en este boton para guardar tus tareas</h1>
               </form>
             </div>
           </div>
